# 2019-I-Highload

./: .gitignore  .gitmodules  1_gen_project.bat  1_gen_project.sh  2_build_project.sh  2_run_project.bat  3_run_project.sh  CMakeLists.txt  Dockerfile  ReadMe.md  config.json
cmake/: setup.cmake  units.cmake
cmake/units/: CmakeLists.txt  test.cmake
cmd/: CMakeLists.txt  main.cpp
internal/: CMakeLists.txt
internal/__libs__/: ReadMe.md
internal/__libs__/boost/: CMakeLists.txt
internal/common/: CMakeLists.txt  common.hpp
internal/configs/: CMakeLists.txt
internal/configs/Private/: config.cpp
internal/configs/Public/: config.hpp
internal/libs/boost/: CMakeLists.txt
internal/libs/date/: CMakeLists.txt  loader.cmake
internal/libs/mmap/: CMakeLists.txt  loader.cmake
internal/reflect/: CMakeLists.txt
internal/reflect/Private/: Archiver.cpp
internal/reflect/Public/: Archived.hpp  Archiver.hpp  TypeConversion.hpp
internal/server/: CMakeLists.txt
internal/server/Private/: iserver.cpp  parser.cpp  parser.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server_common.hpp  session.cpp  session.hpp
internal/server/Public/: iserver.hpp  server.hpp
internal/server/Test/: config_test.cpp  parser_test.cpp  request_test.cpp  response_test.cpp  session_test.cpp  tests_common.hpp
